@@ -238,6 +238,8 @@ Core and builtins
 Library
 -------
 
+- Bug #978833: Close https sockets by releasing the _ssl object.
+
 - Change location of the package index to pypi.python.org/pypi
 
 - Bug #1701409: Fix a segfault in printing ctypes.c_char_p and
